# tube_polishing

./: .gitignore  CMakeLists.txt  README.md  axis_points  axis_points.pcd  clusterCloud1.pcd  mainpage.dox  manifest.xml
config/: filters.yaml  self_filter_right_left.yaml
data/: simple_cylinder_profile_trajectory.csv
data/models/GrinderWheel/: manifest.xml
data/models/GrinderWheel/meshes/: GrinderWheel.stl
data/models/GrinderWheel/robots/: GrinderWheel.urdf
data/models/tube_1/: manifest.xml
data/models/tube_1/meshes/: tube_1.stl
data/models/tube_1/robots/: tube_1.urdf
data/models/tube_2/: manifest.xml
data/models/tube_2/meshes/: tube_2.STL  tube_2.stl
data/models/tube_2/robots/: tube_2 (copy).urdf  tube_2.urdf
data/models/tube_3/: manifest.xml
data/models/tube_3/meshes/: tube_3.STL
data/models/tube_3/robots/: tube_3.urdf
data/models/tube_4/: manifest.xml
data/models/tube_4/meshes/: tube_4.stl
data/models/tube_4/robots/: tube_4.urdf
data/models/tube_5/: manifest.xml
data/models/tube_5/meshes/: tube_5.stl
data/models/tube_5/robots/: tube_5.urdf
data/models/tube_6/: manifest.xml
data/models/tube_6/meshes/: tube_6.stl
data/models/tube_6/robots/: tube_6.urdf
data/models/tube_8/: manifest.xml
data/models/tube_8/meshes/: tube_8.stl
data/models/tube_8/robots/: tube_8.urdf
data/models/tube_9_asm/: manifest.xml
data/models/tube_9_asm/meshes/: ring.stl  tube_link.stl
data/models/tube_9_asm/robots/: tube_9_asm.urdf
data/pcd_files/: axis_points.pcd  tube_2.pcd  tube_3.pcd
include/: base.cpp  collisionObjects.h  controlSequence.h  dualArms.h  grasp.h  gripper.h  kdl_ik.h  kinematics.h  manipAnalysis.h  manip_analysis.cpp  manipulability_matric.cpp  manipulation.h  perception.h  robotHead.h  state_machine.h  tubeGrasp.h  tubeManipulation.h  tubeModel.h  tubePerception.h  utility.h
launch/: both_arms_filters.launch  both_arms_navigation.launch  environment_server.launch  gazebo_table_object.launch  laser-perception.launch  moveit.launch  perception.launch  pr2_gazebo_table_object_navigation_filter_perception.launch  pr2_gazebo_table_object_navigation_filter_perception_rviz.launch  pr2_gripper_sensor_actions.launch  pr2_table_object.launch  spawn_object.launch  tabletop_segmentation.launch  trajectory_filter.launch
src/: collision_check.cpp  collision_objects.cpp  control_sequence.cpp  dualArms.cpp  dualArms2.h  dual_arms.cpp  dual_arms2.cpp  main.cpp  manip_analysis.cpp  manipulation.cpp  perception.cpp  regenerate_tube_model.cpp  robot_head.cpp  state_machine.cpp  tabletop_segmentation.cpp  tubeGrasp.h  tubePerception.h  tube_grasp.cpp  tube_manipulation.cpp  tube_perception.cpp
